--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -36,7 +36,7 @@
         "import sympy as sp\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
           "height": 88
         },
         "id": "hznVsupCKKBk",
-        "outputId": "5c7cd42b-b1ad-4790-ccd1-a0dce5a3ac0b"
+        "outputId": "de1f9514-d04a-405b-8f47-511590fe37b9"
       },
       "source": [
         "k,S=sp.symbols(\"k,S\")\n",
@@ -70,7 +70,7 @@
         "           [0,k,k],\n",
         "]).inv()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,7 +84,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 6
         }
       ]
     },
@@ -94,59 +94,40 @@
         "id": "9cmTOeao6p0Z",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 58
+          "height": 78
         },
-        "outputId": "ceb51537-f9b3-4ebb-f7e6-60bee7f5e37c"
+        "outputId": "266b7e81-a649-4675-b5d0-ddcc72db7be0"
       },
       "source": [
-        "a,b1,c,b2,e,f1,g,f2=sp.symbols(\"a,b_1,c,b_2,e,f_1,g,f_2\")\n",
         "A=sp.Matrix([\n",
         "           [3,-1],\n",
         "           [1, 2],\n",
         "           [1, 4],\n",
         "])\n",
         "u=sp.Matrix(\n",
-        "[   \n",
-        " [b1,a],\n",
-        " [c,b2],\n",
-        "]\n",
+        "[    [1],\n",
+        "    [2],\n",
+        "    ]\n",
         ")\n",
-        "f=sp.Matrix(\n",
-        "[   \n",
-        " [f1,e],\n",
-        " [g,f2],\n",
-        "]\n",
-        ")\n",
-        "f\n",
-        "f+u"
+        "A*u"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/latex": "$\\displaystyle \\left[\\begin{matrix}b_{1} + f_{1} & a + e\\\\c + g & b_{2} + f_{2}\\end{matrix}\\right]$",
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1\\\\5\\\\9\\end{matrix}\\right]$",
             "text/plain": [
               "Matrix([\n",
-              "[b_1 + f_1,     a + e],\n",
-              "[    c + g, b_2 + f_2]])"
+              "[1],\n",
+              "[5],\n",
+              "[9]])"
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 6
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zyhIRZQPlAae"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -427,13 +408,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qb4eKU1gdG9P"
+        "id": "qb4eKU1gdG9P",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "outputId": "baab207c-4843-4b18-d89a-3c43874c55e6"
       },
       "source": [
-        ""
+        "sp.Matrix([\n",
+        "           [2,0,-3,2,0,-3],\n",
+        "           [4,2,23,4,2,23],\n",
+        "           [0,4,3,0,4,3],\n",
+        "           [1,0,0,1,0,0],\n",
+        "           [0,1,0,0,1,0],\n",
+        "           [0,0,1,0,0,1]\n",
+        "]).rref()[0]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0 & 1 & 0 & 0\\\\0 & 1 & 0 & 0 & 1 & 0\\\\0 & 0 & 1 & 0 & 0 & 1\\\\0 & 0 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 0 & 0\\end{matrix}\\right]$",
+            "text/plain": [
+              "Matrix([\n",
+              "[1, 0, 0, 1, 0, 0],\n",
+              "[0, 1, 0, 0, 1, 0],\n",
+              "[0, 0, 1, 0, 0, 1],\n",
+              "[0, 0, 0, 0, 0, 0],\n",
+              "[0, 0, 0, 0, 0, 0],\n",
+              "[0, 0, 0, 0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
